--- a/content/multifall.cfg
+++ b/content/multifall.cfg
@@ -22,6 +22,7 @@ PlayerMoveForward = W
 PlayerMoveBackward = S
 PlayerMoveLeft = A
 PlayerMoveRight = D
+PlayerActivate = E
 
 [Misc]
 Sensitivity = 0.001
